<resources>
    <string name="app_name">FitTracker</string>


    <!-- GENERAL STRING -->
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <!-- USER VALIDATION STRINGS -->
    <string name="username_exists">Registration</string>

    <!-- Headers -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Overview</string>
    <string name="title_login">Login</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_registration">Registration</string>
</resources>
