<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.fittracker.activity.RegistrationActivity"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/editText_registrationUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/editText_registrationPassword"
        app:layout_constraintEnd_toEndOf="@+id/btn_cancelregistration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText_registrationPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/editText_registrationEmail"
        app:layout_constraintStart_toStartOf="@+id/editText_registrationUserName"
        app:layout_constraintTop_toBottomOf="@+id/editText_registrationUserName"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/editText_registrationEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/btn_registration"
        app:layout_constraintStart_toStartOf="@+id/editText_registrationPassword"
        app:layout_constraintTop_toBottomOf="@+id/editText_registrationPassword"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btn_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancelregistration"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registrationEmail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_cancelregistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_registration"
        app:layout_constraintTop_toBottomOf="@+id/editText_registrationEmail"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>
